tested AES encryption message sent to server receive message and decrypted with AES

--- a/project.config.json
+++ b/project.config.json
@@ -18,8 +18,8 @@
 		}
 	},
 	"compileType": "miniprogram",
-	"appid": "wx387d93f434e6b3f4",
-	"projectname": "miniapp2",
+	"appid": "wx0929decfbc037ccb",
+	"projectname": "ve450",
 	"miniprogramRoot": "weapp/",
 	"simulatorType": "wechat",
 	"simulatorPluginLibVersion": {},
