--- a/package.json
+++ b/package.json
@@ -18,14 +18,17 @@
   "dependencies": {
     "@wepy/core": "^2.0.0-alpha.8",
     "@wepy/x": "^2.0.2",
+    "crypto-js": "^3.1.9-1",
     "miniprogram-slide-view": "0.0.3",
     "weapp.socket.io": "^2.0.1"
   },
   "devDependencies": {
-    "@wepy/cli": "^2.0.0-alpha.10",
     "@babel/core": "^7.1.0",
     "@babel/preset-env": "^7.1.0",
     "@wepy/babel-plugin-import-regenerator": "0.0.2",
+    "@wepy/cli": "^2.0.0-alpha.13",
+    "@wepy/compiler-babel": "^2.0.1",
+    "@wepy/compiler-less": "^2.0.1",
     "babel-eslint": "^7.2.1",
     "cross-env": "^5.1.3",
     "eslint": "^3.18.0",
@@ -34,9 +37,7 @@
     "eslint-plugin-html": "^2.0.1",
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-standard": "^2.0.1",
-    "wepy-eslint": "^1.5.3",
     "less": "^3.8.1",
-    "@wepy/compiler-babel": "^2.0.1",
-    "@wepy/compiler-less": "^2.0.1"
+    "wepy-eslint": "^1.5.3"
   }
 }
