--- a/project.config.json
+++ b/project.config.json
@@ -18,7 +18,7 @@
 		}
 	},
 	"compileType": "miniprogram",
-	"appid": "wx9f2e95dd133a1a54",
+	"appid": "wx0929decfbc037ccb",
 	"projectname": "miniapp",
 	"miniprogramRoot": "weapp/",
 	"simulatorType": "wechat",
