--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
   "license": "MIT",
   "dependencies": {
     "@stablelib/base64": "^0.7.2",
+    "@stablelib/utf8": "^0.10.1",
     "@wepy/core": "^2.0.0-alpha.8",
     "@wepy/redux": "^2.0.1",
-    "crypto-browserify": "^3.12.0",
     "crypto-js": "^3.1.9-1",
     "miniprogram-slide-view": "0.0.3",
     "polyfill-crypto.getrandomvalues": "^1.0.0",
@@ -27,7 +27,6 @@
     "redux-actions": "^2.6.5",
     "redux-promise": "^0.6.0",
     "tweetnacl": "^1.0.1",
-    "tweetnacl-util": "^0.15.0",
     "weapp.socket.io": "^2.0.1"
   },
   "devDependencies": {
